// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the SEOScoreAssessment matches the snapshot 1`] = `
<li
  className="sc-bdVaJa NwjxL"
>
  <span
    className="sc-bwzfXH hDUHkw"
  >
    <span
      className="sc-htpNat kFLInf"
      color="black"
    />
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "<strong>HTML!</strong>",
        }
      }
    />
  </span>
  <span
    className="sc-bxivhb bIsIdK sc-bwzfXH hDUHkw"
  >
    25
  </span>
</li>
`;

exports[`the SEOScoreAssessment without score matches the snapshot 1`] = `
<li
  className="sc-bdVaJa NwjxL"
>
  <span
    className="sc-bwzfXH hDUHkw"
  >
    <span
      className="sc-htpNat kFLInf"
      color="black"
    />
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "<strong>HTML!</strong>",
        }
      }
    />
  </span>
</li>
`;
